# Note: keep this file in wiki format for easy pasting to the proto-ch wiki
# Note: keep milestone bullets in ticket numerical order for easier
#       reconciliation at release time

= GENI Portal Release Notes =

== 2.22 ==
 * Include link to NYU Poly WITest wireless site. (#773)
 * Fix headers in email that your lead request was received. (#1197)
 * Fix bug report to print list of aggregates correctly. (#1198)
 * Change label for add resources URL entry (#1201)
 * Use `email()` function to get user's address, not a `mail` attribute. (#1206)
 * Move included files to lib from portal (#1207)
 * Handle unknown AM URNs and URLs mroe gracefully. (#1212)
 * Exclude users with no public SSH keys from the generated omni_config. (#1215)
 * Put radio buttons on left on jacks add resources (#1217)
 * Widen URL entry on Jacks add resources page (#1218)
 * Handle 'pending' status from OpenGENI AMs. (#1221)
 * Handle multiple 'services' tags in an RSpec. (#1222)
 * Error check arguments to do-edit-slice-member. (#1224)
 * Switch to Jacks stable (#1228)

== 2.21.4 ==
 * Lowercase eppn before lookup in speaks-for flow (#1209)

== 2.21.3 ==
 * New Jacks icons

== 2.21.2 ==
 * Provide a simple Jacks context (#1194)
 * Add an `index.php` that redirects to `home.php` to block directory
   listing. (#1196)
 * Change URL entrypoints for GENI Desktop (#1199)

== 2.21 ==
 * Added support for distinguishing bound, unbound and partially bound rspecs. (#1126)
 * Added "Jacks beta" buttons and versions of slices.php (slice-jacks.php) and 
   slice-add-resources.php (slice-add-resources-jacks.php) that handle all creation and management
   of topologies by embedding Jacks viewer/editor in PHP portal pages. (#1126)
 * When sending email, set charset to utf8 and transfer encoding to 8bit,
   so that international characters are preserved correctly. (#1162)
 * Extract sliver expiration at FOAM (so OESS), SFA, and GRAM AMs. (#1173)
 * aggregates_in_slice only finds one aggregate (#1174)